# ROS2-Reinforcement-Learning-Drive

./: CMakeLists.txt  README.md  package.xml
apps/: reinforcement_learning_drive_node.cpp
include/reinforcement_learning_drive/: reinforcement_learning_drive.hpp
include/reinforcement_learning_drive/actor/: ackermann_steering_actor.hpp  actor.hpp  ros2_actor.hpp
include/reinforcement_learning_drive/environment/: environment.hpp  occupancy_grid_environment.hpp  ros2_environment.hpp
include/reinforcement_learning_drive/reward/: path_tracking_reward.hpp  reward.hpp  ros2_reward.hpp
launch/: occupancy.launch.py
reinforcement_learning_drive/: .clang-format  CMakeLists.txt  package.xml
reinforcement_learning_drive/include/reinforcement_learning_drive/: reinforcement_learning_drive.hpp
reinforcement_learning_drive/include/reinforcement_learning_drive/actor/: actor.hpp  differential_actor.hpp  ros2_actor.hpp
reinforcement_learning_drive/include/reinforcement_learning_drive/environment/: environment.hpp  gazebo_environment.hpp  occupancy_grid_environment.hpp  ros2_environment.hpp
reinforcement_learning_drive/include/reinforcement_learning_drive/reward/: path_tracking_reward.hpp  reward.hpp  ros2_reward.hpp  scan_reward.hpp
reinforcement_learning_drive/launch/: gazebo.launch.py  occupancy.launch.py
reinforcement_learning_drive/map/: map3.yaml
reinforcement_learning_drive/src/: reinforcement_learning_drive.cpp
reinforcement_learning_drive/src/actor/: ackermann_steering_actor.cpp  actor.cpp  differential_actor.cpp  ros2_actor.cpp
reinforcement_learning_drive/src/environment/: gazebo_environment.cpp  occupancy_grid_environment.cpp
reinforcement_learning_drive/src/reward/: path_tracking_reward.cpp  scan_reward.cpp
reinforcement_learning_drive/world/: empty.world
reinforcement_learning_drive_interface/: CMakeLists.txt  package.xml
reinforcement_learning_drive_interface/action/: Drive.action
reinforcement_learning_drive_interface/msg/: State.msg
reinforcement_learning_drive_interface/srv/: Drive.srv  MultiDrive.srv
reinforcement_learning_drive_model/: package.xml  setup.cfg  setup.py
reinforcement_learning_drive_model/reinforcement_learning_drive_model/: dqn_node.py  dqn_single_node.py  initial_pose_subscriber.py  path_publisher.py
src/: reinforcement_learning_drive.cpp
src/actor/: ackermann_steering_actor.cpp  actor.cpp  ros2_actor.cpp
src/environment/: occupancy_grid_environment.cpp
src/reward/: path_tracking_reward.cpp
